api fixes