@@ -9,257 +9,12 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+
     <name>Vimient Automation Framework</name>
     <url>http://maven.apache.org</url>
     <description>General purpose test automation framework for Java. Based on Cucumber- JVM, Concordion and Selenium2</description>
 
     <licenses>
-<!--        <license>-->
-<!--            <name>The Apache Software License, Version 2.0</name>-->
-<!--            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>-->
-<!--            <distribution>repo</distribution>-->
-<!--        </license>-->
-<!--    </licenses>-->
-
-<!--    <properties>-->
-<!--        <maven.compiler.source>1.8</maven.compiler.source>-->
-<!--        <maven.compiler.target>1.8</maven.compiler.target>-->
-<!--        <resources.encoding>UTF-8</resources.encoding>-->
-<!--        <sources.encoding>UTF-8</sources.encoding>-->
-<!--        <jdk.version>1.8</jdk.version>-->
-<!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
-<!--        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
-<!--    </properties>-->
-
-<!--    <dependencies>-->
-<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.seleniumhq.selenium</groupId>-->
-<!--            <artifactId>selenium-java</artifactId>-->
-<!--            <version>4.7.2</version>-->
-<!--        </dependency>-->
-
-<!--        <dependency>-->
-<!--            <groupId>io.cucumber</groupId>-->
-<!--            <artifactId>cucumber-java</artifactId>-->
-<!--            <version>7.8.1</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.cucumber</groupId>-->
-<!--            <artifactId>cucumber-testng</artifactId>-->
-<!--            <version>7.8.1</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.cucumber</groupId>-->
-<!--            <artifactId>tag-expressions</artifactId>-->
-<!--            <version>4.1.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.slf4j</groupId>-->
-<!--            <artifactId>slf4j-api</artifactId>-->
-<!--            <version>2.0.6</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.slf4j</groupId>-->
-<!--            <artifactId>slf4j-simple</artifactId>-->
-<!--            <version>2.0.6</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.browserstack</groupId>-->
-<!--            <artifactId>browserstack-local-java</artifactId>-->
-<!--            <version>1.0.6</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.rest-assured</groupId>-->
-<!--            <artifactId>rest-assured</artifactId>-->
-<!--            <version>5.3.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.github.javafaker</groupId>-->
-<!--            <artifactId>javafaker</artifactId>-->
-<!--            <version>1.0.2</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.google.code.gson</groupId>-->
-<!--            <artifactId>gson</artifactId>-->
-<!--            <version>2.10</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.appium</groupId>-->
-<!--            <artifactId>java-client</artifactId>-->
-<!--            <version>8.3.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.sun.mail</groupId>-->
-<!--            <artifactId>javax.mail</artifactId>-->
-<!--            <version>1.6.2</version>-->
-<!--        </dependency>-->
-<!--&lt;!&ndash;-->
-<!--cucumber.runtime.CucumberException: No backends were found. Please make sure you have a backend module on your CLASSPATH.-->
-
-<!--	at cucumber.runtime.BackendModuleBackendSupplier.get(BackendModuleBackendSupplier.java:41)-->
-<!--	at cucumber.runner.ThreadLocalRunnerSupplier.createRunner(ThreadLocalRunnerSupplier.java:42)-->
-<!--	at cucumber.runner.ThreadLocalRunnerSupplier.access$000(ThreadLocalRunnerSupplier.java:13)-->
-<!--	at cucumber.runner.ThreadLocalRunnerSupplier$1.initialValue(ThreadLocalRunnerSupplier.java:22)-->
-<!--	at cucumber.runner.ThreadLocalRunnerSupplier$1.initialValue(ThreadLocalRunnerSupplier.java:19)-->
-<!--	at java.base/java.lang.ThreadLocal.setInitialValue(ThreadLocal.java:195)-->
-<!--	at java.base/java.lang.ThreadLocal.get(ThreadLocal.java:172)-->
-<!--	at cucumber.runner.ThreadLocalRunnerSupplier.get(ThreadLocalRunnerSupplier.java:38)-->
-<!--	at io.cucumber.junit.Cucumber$RunCucumber.evaluate(Cucumber.java:173)-->
-<!--	at org.junit.internal.runners.statements.RunBefores.evaluate(RunBefores.java:26)-->
-<!--	at org.junit.internal.runners.statements.RunAfters.evaluate(RunAfters.java:27)-->
-<!--	at org.junit.runners.ParentRunner$3.evaluate(ParentRunner.java:306)-->
-<!--	at org.junit.runners.ParentRunner.run(ParentRunner.java:413)-->
-<!--	at org.junit.runner.JUnitCore.run(JUnitCore.java:137)-->
-<!--	at com.intellij.junit4.JUnit4IdeaTestRunner.startRunnerWithArgs(JUnit4IdeaTestRunner.java:69)-->
-<!--	at com.intellij.rt.junit.IdeaTestRunner$Repeater$1.execute(IdeaTestRunner.java:38)-->
-<!--	at com.intellij.rt.execution.junit.TestsRepeater.repeat(TestsRepeater.java:11)-->
-<!--	at com.intellij.rt.junit.IdeaTestRunner$Repeater.startRunnerWithArgs(IdeaTestRunner.java:35)-->
-<!--	at com.intellij.rt.junit.JUnitStarter.prepareStreamsAndStart(JUnitStarter.java:235)-->
-<!--	at com.intellij.rt.junit.JUnitStarter.main(JUnitStarter.java:54)-->
-
-<!--  <dependency>&ndash;&gt;-->
-<!--&lt;!&ndash;            <groupId>io.cucumber</groupId>&ndash;&gt;-->
-<!--&lt;!&ndash;            <artifactId>cucumber-java8</artifactId>&ndash;&gt;-->
-<!--&lt;!&ndash;            <version>7.2.3</version>&ndash;&gt;-->
-<!--&lt;!&ndash;        </dependency>&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>io.cucumber</groupId>-->
-<!--            <artifactId>cucumber-core</artifactId>-->
-<!--            <version>7.8.1</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.testvagrant.mdb</groupId>-->
-<!--            <artifactId>mdb</artifactId>-->
-<!--            <version>2.2.1</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>me.alexpanov</groupId>-->
-<!--            <artifactId>free-port-finder</artifactId>-->
-<!--            <version>1.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.aventstack</groupId>-->
-<!--            <artifactId>extentreports-cucumber4-adapter</artifactId>-->
-<!--            <version>1.0.12</version>-->
-<!--            <exclusions>-->
-<!--                <exclusion>-->
-<!--                    <groupId>io.cucumber</groupId>-->
-<!--                    <artifactId>cucumber-java</artifactId>-->
-<!--                </exclusion>-->
-<!--                <exclusion>-->
-<!--                    <groupId>io.cucumber</groupId>-->
-<!--                    <artifactId>cucumber-core</artifactId>-->
-<!--                </exclusion>-->
-<!--            </exclusions>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.seleniumhq.selenium</groupId>-->
-<!--            <artifactId>selenium-support</artifactId>-->
-<!--            <version>4.7.2</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.cucumber</groupId>-->
-<!--            <artifactId>cucumber-junit</artifactId>-->
-<!--            <version>7.8.1</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.cucumber</groupId>-->
-<!--            <artifactId>cucumber-junit</artifactId>-->
-<!--            <version>7.8.1</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>junit</groupId>-->
-<!--            <artifactId>junit</artifactId>-->
-<!--            <version>4.13.2</version>-->
-<!--            <scope>compile</scope>-->
-<!--        </dependency>-->
-<!--    </dependencies>-->
-<!--    <build>-->
-<!--        <resources>-->
-<!--            <resource>-->
-<!--                <directory>src/test/resources</directory>-->
-<!--                <filtering>true</filtering>-->
-<!--            </resource>-->
-<!--        </resources>-->
-<!--        <pluginManagement>-->
-<!--            <plugins>-->
-<!--                <plugin>-->
-<!--                    <groupId>org.apache.maven.plugins</groupId>-->
-<!--                    <artifactId>maven-compiler-plugin</artifactId>-->
-<!--                    <configuration>-->
-<!--                        <source>${jdk.version}</source>-->
-<!--                        <target>${jdk.version}</target>-->
-<!--                    </configuration>-->
-<!--                    <version>3.0</version>-->
-<!--                </plugin>-->
-<!--                <plugin>-->
-<!--                    <groupId>org.apache.maven.plugins</groupId>-->
-<!--                    <artifactId>maven-failsafe-plugin</artifactId>-->
-<!--                    <version>2.18.1</version>-->
-<!--                    <executions>-->
-<!--                        <execution>-->
-<!--                            <configuration>-->
-<!--                                <forkCount>3</forkCount>-->
-<!--                                <reuseForks>true</reuseForks>-->
-<!--                                <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
-<!--                                <testFailureIgnore>true</testFailureIgnore>-->
-<!--                                <includes>-->
-<!--                                    <includesFile>**/*Test.java</includesFile>-->
-<!--                                </includes>-->
-<!--                            </configuration>-->
-<!--                            <goals>-->
-<!--                                <goal>integration-test</goal>-->
-<!--                                <goal>verify</goal>-->
-<!--                            </goals>-->
-<!--                        </execution>-->
-<!--                    </executions>-->
-<!--                </plugin>-->
-<!--                <plugin>-->
-<!--                    <groupId>org.apache.maven.plugins</groupId>-->
-<!--                    <artifactId>maven-surefire-plugin</artifactId>-->
-<!--                    <version>3.0.0-M5</version>-->
-<!--                    <configuration>-->
-<!--                        <testFailureIgnore>true</testFailureIgnore>-->
-<!--                    </configuration>-->
-<!--                </plugin>-->
-<!--                <plugin>-->
-<!--                    <groupId>org.codehaus.mojo</groupId>-->
-<!--                    <artifactId>exec-maven-plugin</artifactId>-->
-<!--                    <version>3.1.0</version>-->
-<!--                    <executions>-->
-<!--                        <execution>-->
-<!--                            <id>default-cli</id>-->
-<!--                            <phase>test</phase>-->
-<!--                            <goals>-->
-<!--                                <goal>java</goal>-->
-<!--                            </goals>-->
-<!--                            <configuration>-->
-<!--                                <mainClass>RunnerTest</mainClass>-->
-<!--                            </configuration>-->
-<!--                        </execution>-->
-<!--                        <execution>-->
-<!--                            <id>second-cli</id>-->
-<!--                            <phase>test</phase>-->
-<!--                            <goals>-->
-<!--                                <goal>java</goal>-->
-<!--                            </goals>-->
-<!--                            <configuration>-->
-<!--                                <mainClass>MobileRunner</mainClass>-->
-<!--                            </configuration>-->
-<!--                        </execution>-->
-<!--                    </executions>-->
-<!--                </plugin>-->
-<!--            </plugins>-->
-<!--        </pluginManagement>-->
-<!--    </build>-->
-<!--    <profiles>-->
-<!--        <profile>-->
-<!--            <id>selenium-tests</id>-->
-<!--        </profile>-->
-<!--    </profiles>-->
         <license>
             <name>The Apache Software License, Version 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
@@ -274,9 +29,13 @@
         <sources.encoding>UTF-8</sources.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <rest-assured-version>5.3.0</rest-assured-version>
     </properties>
 
+
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
@@ -297,6 +56,12 @@
             <artifactId>tag-expressions</artifactId>
             <version>4.1.0</version>
         </dependency>
+                <dependency>
+                    <groupId>org.testng</groupId>
+                    <artifactId>testng</artifactId>
+                    <version>7.6.1</version>
+                    <scope>compile</scope>
+                </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -312,11 +77,26 @@
             <artifactId>browserstack-local-java</artifactId>
             <version>1.0.3</version>
         </dependency>
+
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>4.4.0</version>
+            <version>${rest-assured-version}</version>
+            <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured-version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${rest-assured-version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
